# sec_parse

./: .gitignore  README.md
sec_agent/: Dockerfile  agentcore.py  deploy.sh  pyproject.toml  run_app.py
sec_agent/eval/: logs.json  pricing.py  questions.csv  questions_financebench.csv  run_eval.py  usage.py
sec_agent/eval/results/: questions_20260420T151600Z.csv  questions_20260420T153049Z.csv  questions_20260420T165318Z.csv  questions_20260420T165816Z.csv  questions_20260420T170900Z.csv  questions_20260420T173634Z.csv  questions_20260420T174046Z.csv  questions_20260421T011605Z.csv  questions_20260421T011731Z.csv  questions_20260421T131436Z.csv  questions_20260422T002403Z.csv  questions_20260422T012523Z.csv  questions_20260422T234859Z.csv  questions_20260423T193152Z.csv  questions_20260423T200728Z.csv  questions_20260423T202942Z.csv  questions_20260423T203703Z.csv  questions_20260423T210448Z.csv  questions_20260424T125120Z.csv  questions_20260424T130415Z.csv  questions_20260424T133731Z.csv  questions_20260424T140133Z.csv  questions_20260424T140728Z.csv  questions_20260424T160241Z.csv  questions_20260424T161155Z.csv  questions_20260424T162000Z.csv  questions_20260424T162705Z.csv  questions_20260424T170056Z.csv  questions_20260424T171429Z.csv  questions_financebench_20260424T183037Z.csv  questions_financebench_20260424T183439Z.csv  questions_financebench_20260424T191237Z.csv  (+4 more)
sec_agent/infra/: cdk.json  package-lock.json  package.json  tsconfig.json
sec_agent/scripts/: diagnose_dsrag_sectioning.py  probe_q13_q14.py  test_local.py
sec_agent/src/: config.py  main.py
(+127 files in other folders)
